<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp" 
        android:orientation="horizontal">

        <TextView
            android:id="@+id/conversionTitleLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/conversion_title_label"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/oneCurrencyLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_alignLeft="@+id/conversionTitleLabel"
            android:layout_below="@+id/conversionTitleLabel"
            android:text="@string/one_currency_label"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/oneCurrencyEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/oneCurrencyLabel"
            android:layout_marginLeft="15dp"
            android:layout_toRightOf="@+id/oneCurrencyLabel"
            android:ems="8"
            android:inputType="numberDecimal"
            android:text="@string/one_currency"
            android:textSize="18sp" >

            <requestFocus/>
        </EditText>

        <TextView
            android:id="@+id/rateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/oneCurrencyLabel"
            android:layout_below="@+id/oneCurrencyLabel"
            android:padding="10dp"
            android:text="@string/rate_label"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/rateTextView"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/rateLabel"
            android:layout_alignLeft="@+id/oneCurrencyEditText"
            android:padding="5dp"
            android:text="@string/rate"
            android:textSize="18sp" />

        <SeekBar
            android:id="@+id/rateSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/rateLabel"
            android:layout_toRightOf="@+id/rateTextView"
            android:max="1000"
            android:padding="15dp"
            android:progress="@integer/rate_seekbar" />

        <TextView
            android:id="@+id/secondCurrencyLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/rateLabel"
            android:layout_below="@+id/rateLabel"
            android:padding="10dp"
            android:text="@string/second_currency_label"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/secondCurrencyEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/secondCurrencyLabel"
            android:layout_toRightOf="@+id/secondCurrencyLabel"
            android:ems="8"
            android:inputType="numberDecimal"
            android:padding="10dp"
            android:text="@string/second_currency"
            android:textSize="18sp" />

        <Button
            android:id="@+id/convertButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/secondCurrencyLabel"
            android:layout_centerHorizontal="true"
            android:padding="5dp"
            android:text="@string/convert_button" />

        <TextView
            android:id="@+id/conversionChoiceLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/secondCurrencyLabel"
            android:layout_below="@+id/convertButton"
            android:padding="10dp"
            android:text="@string/conversion_choice_label"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/conversionChoiceSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/conversionChoiceLabel"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/conversionChoiceLabel"/>



    </RelativeLayout>

</ScrollView>